Finally fix misaligned title :)

--- a/static/main.css
+++ b/static/main.css
@@ -33,6 +33,7 @@ ul {
 .title {
     margin: 50px auto;
     max-width: 500px;
+    padding: 0 20px;
 }
 
 .intro {
